samples/_failures_safe/1761129366_e653a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f4071dc.c: In function ‘main’:
./samples/SAFE/__tmp_6f4071dc.c:181:18: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  181 |     Token tokens[MAX_TOK
      |                  ^~~~~~~
      |                  MAX_TOKENS
./samples/SAFE/__tmp_6f4071dc.c:181:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6f4071dc.c:181:25: error: expected ‘]’ at end of input
  181 |     Token tokens[MAX_TOK
      |                         ^
      |                         ]
./samples/SAFE/__tmp_6f4071dc.c:181:5: error: expected declaration or statement at end of input
  181 |     Token tokens[MAX_TOK
      |     ^~~~~
